CF-1396: Fix avg score overlapping with separator

--- a/assets/stylesheets/coefficient/modules/audit-reporting.sass
+++ b/assets/stylesheets/coefficient/modules/audit-reporting.sass
@@ -12,6 +12,8 @@
   text-align: center
   margin-bottom: 15px
   border-right: 1px solid $greylight
+  h4
+    white-space: nowrap
 
 #percent-reporting-box
   text-align: center
@@ -63,7 +65,7 @@
 #average-score
   font-weight: 200
   color: $info
-  padding: 10px
+  padding: 10px 0
   line-height: 1
   text-align: center
   @extend %huge
